simplify wal write paths